Update gradle task with class test.